--- a/.env
+++ b/.env
@@ -30,7 +30,8 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/db_name?serverVersion=mariadb-10.5.8"
+#DATABASE_URL="mysql://root:@127.0.0.1:3306/db_name?serverVersion=mariadb-10.5.8"
+DATABASE_URL="mysql://b74249f1b07c63:0cb91706@eu-cdbr-west-03.cleardb.net/heroku_4ca52c942af85c2?reconnect=true"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
