--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "require": {
         "php": ">=8.1",
         "ext-ctype": "*",
+        "ext-curl": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
         "phpdocumentor/reflection-docblock": "^5.3",
+        "phpoffice/phpspreadsheet": "^1.26",
         "phpstan/phpdoc-parser": "^1.13",
         "phpunit/phpunit": "^9.5",
         "sensio/framework-extra-bundle": "^6.1",
