nush ce sa ii mai fac

--- a/.env
+++ b/.env
@@ -44,5 +44,5 @@ DATABASE_URL="mysql://b74249f1b07c63:0cb91706@eu-cdbr-west-03.cleardb.net/heroku
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://baschet.bucurestean@gmail.com:nyoeyvnutvilynbp@smtp.gmail.com:465
 ###< symfony/mailer ###
