--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "symfony/intl": "6.1.*",
         "symfony/mailer": "6.1.*",
         "symfony/maker-bundle": "^1.48",
+        "symfony/messenger": "6.1.*",
         "symfony/mime": "6.1.*",
         "symfony/monolog-bundle": "^3.0",
         "symfony/notifier": "6.1.*",
